k8s/comment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment
  namespace: insta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
        - name: comment
          image: sunaodisha/comment-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: comment
  namespace: insta
spec:
  selector:
    app: comment
  ports:
    - port: 8004
      targetPort: 8004
