k8s/feed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed
  namespace: insta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed
  template:
    metadata:
      labels:
        app: feed
    spec:
      containers:
        - name: feed
          image: sunaodisha/feed-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8006
---
apiVersion: v1
kind: Service
metadata:
  name: feed
  namespace: insta
spec:
  selector:
    app: feed
  ports:
    - port: 8006
      targetPort: 8006
