k8s/like.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: like
  namespace: insta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: like
  template:
    metadata:
      labels:
        app: like
    spec:
      containers:
        - name: like
          image: sunaodisha/like-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8005
---
apiVersion: v1
kind: Service
metadata:
  name: like
  namespace: insta
spec:
  selector:
    app: like
  ports:
    - port: 8005
      targetPort: 8005
