k8s/notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: insta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: sunaodisha/notification-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8007
---
apiVersion: v1
kind: Service
metadata:
  name: notification
  namespace: insta
spec:
  selector:
    app: notification
  ports:
    - port: 8007
      targetPort: 8007
