k8s/post.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post
  namespace: insta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post
  template:
    metadata:
      labels:
        app: post
    spec:
      containers:
        - name: post
          image: sunaodisha/post-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8003
          volumeMounts:
            - name: media
              mountPath: /media
      volumes:
        - name: media
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: post
  namespace: insta
spec:
  selector:
    app: post
  ports:
    - port: 8003
      targetPort: 8003
