k8s/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: insta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: user-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: insta
spec:
  selector:
    app: user
  ports:
    - port: 8002
      targetPort: 8002
